Send data after interrupt from mpu6050

--- a/Vibration_parser.ioc
+++ b/Vibration_parser.ioc
@@ -4,8 +4,9 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x30A0A7FB
+I2C2.I2C_Speed_Mode=I2C_Fast_Plus
+I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.Timing=0x00802172
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
