Add parsing adc from pa0

--- a/Vibration_parser.ioc
+++ b/Vibration_parser.ioc
@@ -1,4 +1,22 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.ContinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EnableRegularConversion=ENABLE
+ADC1.GainCompensation=0
+ADC1.IPParameters=Overrun,ClockPrescaler,Resolution,GainCompensation,EOCSelection,ContinuousConvMode,EnableRegularConversion,OversamplingMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversionFlag,Ratio,OversamplingStopReset,master,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC1.OversamplingMode=ENABLE
+ADC1.OversamplingStopReset=ADC_REGOVERSAMPLING_CONTINUED_MODE
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.Ratio=ADC_OVERSAMPLING_RATIO_16
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -10,37 +28,40 @@ I2C2.Timing=0x00802172
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
-Mcu.IP0=I2C2
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USB
-Mcu.IP5=USB_DEVICE
-Mcu.IPNb=6
+Mcu.IP0=ADC1
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USB
+Mcu.IP6=USB_DEVICE
+Mcu.IPNb=7
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PA15
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PC6
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=16
+Mcu.Pin5=PA0
+Mcu.Pin6=PC6
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
+NVIC.ADC1_2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -54,6 +75,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
 PA10.GPIOParameters=GPIO_PuPd
 PA10.GPIO_PuPd=GPIO_PULLDOWN
 PA10.Locked=true
@@ -124,7 +147,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,4-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
